2007-12-30  Julian Lamb
	* callbacks.[ch], interface.c, others: Implement three "tools", namely
	  the pointer, zoom, and measure tool and hookup to the existing gui
	  stubs. Also, display an informative message in the message bar explaining
	  how to use the active tool (similar to Inkscape). Do some miscellaneous
	  cleanups in the gui code and rendering.
	* callbacks.c, render.[ch]: Get basic printing support working.

2007-12-28  Stefan Petersen  <spe@spe-laptop>
	* src/draw.c, src/amacro.[hc]: gerbv can handle comments
	  and calculations in aperture macros. Unfortunate this 
	  uncovered some errors in how aperture macros are drawn.
	  That will be next issue.

2007-12-28  Julian Lamb
	* gerber.c, many files: Finish implementing all remaining Gerber functions
	  (offsets, mirrors, rotations, knockout, axis select, scale factors,
	  and justify). Rework the min/max calculation routines for much more
	  accurate autoscaling.  Also, much updating was needed to allow the new
	  Gerber functions to autoscale correctly (e.g. scaling needs multiply all
	  the min/max values by the image scale factor, etc).
	* tests/inputs/test-...: Add test files for all Gerber functions.
	* tests/golden/*: Update all the golden files, since the autoscaling
	  rework made all the old golden files fail, since the scale factor is now
	  slightly off from the previous ones, making them fail.

2007-12-28  Stuart Brorson (sdb@cloud9.net)
	* src/callbacks.c, src/drill.c, src/gerb_stats.[hc], src/gerber.c
	src/gerbv_screen.h, src/interface.c, src/pick-and-place.c:
	Added more checks for file type. This should fix problem
	of segfaults when reading RS-274D.  Make messages text window
	(in sidepane) pop up if an error or warning is written to it so
	user can immediately see problems.  Robustified a few areas
	of stats gathering code.	
	

2007-12-25  Stuart Brorson (sdb@cloud9.net)
	* src/gerber.c, src/callbacks.c, src/gerb_stats.[hc]: